comparison with peak performance

--- a/exercise_2/plots.ipynb
+++ b/exercise_2/plots.ipynb
@@ -844,6 +844,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Comparison with Peak Performance\n",
+    "\n",
+    "Theoretical Peak Performance\n",
+    "$$\n",
+    "FLOPS = \\#cores \\times Frequency \\times IPC\n",
+    "$$\n",
+    "\n",
+    "I used a single EPYC socket for this experiment. A CPU in EPYC has 64 cores, a frequency of 2.6 GHz and can perform 16 Floating Point double precision operations per cycle.\n",
+    "Theoretical Peak Performance for a single EPYC CPU is\n",
+    "$$\n",
+    "64 \\times 2.6 \\ GHz \\times 16 = \\boldsymbol{2.6624 \\ TFLOPS}\n",
+    "$$\n",
+    "\n",
+    "The best performance reached in the test is obtained by openBlas at the biggest dimension tested of 20'000 x 20'000 with $938.31 \\ GFLOPS$, or $0.938 \\ TFLOPS$; wich is only **35.24%** of the Theoretical Peak Performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Different threads places"
    ]
   },
@@ -1413,7 +1433,7 @@
     "ax3.plot(spblas[spblas[\"allocation policy\"]==\"sockets\"][\"dim_M\"],spblas[spblas[\"allocation policy\"]==\"sockets\"][\"GFLOPS\"])\n",
     "ax3.plot(spmkl[spmkl[\"allocation policy\"]==\"sockets\"][\"dim_M\"],spmkl[spmkl[\"allocation policy\"]==\"sockets\"][\"GFLOPS\"])\n",
     "ax3.legend([\"openblas\",\"mkl\"])\n",
-    "ax3.set_title(\"Size scaling, Double precision, SOckets allocation\")\n",
+    "ax3.set_title(\"Size scaling, Double precision, Sockets allocation\")\n",
     "ax3.set_xlabel(\"size\")\n",
     "ax3.set_ylabel(\"GFLOPS\")"
    ]
