--- a/exercise_2/plots.ipynb
+++ b/exercise_2/plots.ipynb
@@ -857,7 +857,12 @@
     "64 \\times 2.6 \\ GHz \\times 16 = \\boldsymbol{2.6624 \\ TFLOPS}\n",
     "$$\n",
     "\n",
-    "The best performance reached in the test is obtained by openBlas at the biggest dimension tested of 20'000 x 20'000 with $938.31 \\ GFLOPS$, or $0.938 \\ TFLOPS$; wich is only **35.24%** of the Theoretical Peak Performance."
+    "The best performance reached in the test is obtained by openBlas at the biggest dimension tested of 20'000 x 20'000 with $938.31 \\ GFLOPS$, or $0.938 \\ TFLOPS$; wich is only **35.24%** of the Theoretical Peak Performance.\n",
+    "\n",
+    "\n",
+    "This difference could ahve to do with the following,\n",
+    "- block size\n",
+    "- "
    ]
   },
   {
