--- a/exercise_2/plots.ipynb
+++ b/exercise_2/plots.ipynb
@@ -1705,7 +1705,7 @@
     "ax.plot(csmkl[\"nthreads\"],csmkl[\"GFLOPS\"])\n",
     "ax.legend([\"openblas\",\"mkl\"])\n",
     "ax.set_title(\"Core scaling Single precision\")\n",
-    "ax.set_xlabel(\"threads\")\n",
+    "ax.set_xlabel(\"cores\")\n",
     "ax.set_ylabel(\"GFLOPS\")"
    ]
   },
@@ -1969,7 +1969,7 @@
     "ax.plot(cdmkl[\"nthreads\"],cdmkl[\"GFLOPS\"])\n",
     "ax.legend([\"openblas\",\"mkl\"])\n",
     "ax.set_title(\"Core scaling Double precision\")\n",
-    "ax.set_xlabel(\"threads\")\n",
+    "ax.set_xlabel(\"cores\")\n",
     "ax.set_ylabel(\"GFLOPS\")"
    ]
   }
